--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=https://aposvaki.github.io/angular-introduction/"
+    "deploy": "ng deploy --base-href=https://aposvaki.github.io/final-project-front/"
+
   },
   "private": true,
   "dependencies": {
